--- a/templates/nevisapp/base2.html
+++ b/templates/nevisapp/base2.html
@@ -16,6 +16,32 @@
     <link rel="stylesheet" href="{% static "nevisapp/vendors/css/vendor.bundle.base.css" %}"/>
     <link rel="stylesheet" href="{% static "nevisapp/vendors/datatables.net-bs4/dataTables.bootstrap4.css" %}"/>
     <link rel="stylesheet" href="{% static "nevisapp/js/select.dataTables.min.css" %}"/>
+    <style>
+        #text-container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            overflow: hidden; /* This will hide the overflow text */
+            white-space: nowrap; /* This will keep the text on one line */
+            animation: typing 1.5s steps(40, end);
+        }
+
+        @keyframes typing {
+            from {
+                width: 0;
+            }
+            to {
+                width: 100%;
+            }
+        }
+
+        @keyframes blink-caret {
+            from, to {
+                border-color: transparent;
+            }
+        }
+    </style>
 
     <!-- Load d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
@@ -23,23 +49,7 @@
 <!-- Load d3-cloud -->
 <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3.layout.cloud.js"></script>
 </head>
-<body class="with-welcome-text">
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="navbar-nav">
-          {# Django Home Link / Admin Link / Register Link#}
-          <a class="navbar-brand" href="{% url 'index' %}">DJANGO</a>
-          <a class="nav-item nav-link" href="{% url 'admin:index' %}">Admin</a>
-          <a class="nav-item nav-link" href="{% url 'nevisapp:register' %}">Register</a>
-  
-          {# Some logic on what to display for last item#}
-          {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-          {% else %}
-            <a class="nav-link" href="{% url 'nevisapp:user_login' %}">Login</a>
-          {% endif %}
-        </div>
-      </nav> -->
-  
+<body>
       <div>
       {% block body_block %}
       {% endblock %}
